# ray-demo

./: .env.template  .gitignore  README.md  pyproject.toml
cluster/: ray-cluster.yaml
notebooks/: baseline-model-wandb.ipynb  play.ipynb  ray-core-image-processing.ipynb  ray-core-montecarlo-pi.ipynb  ray-data-example.ipynb  ray-train-example.ipynb
ray_cluster/: ray-cluster.yaml
ray_demo/: model_training.py
ray_demo/datasets/: __init__.py  segmentations3.py
ray_demo/jobs/: batch_classification.py
ray_demo/models/unet/: model.py
ray_demo/utils/: constants.py
ray_lightning_demo/: batch_classification.py  main.py
ray_lightning_demo/models/unet/: model.py
terraform/demo/: backend.tf  data.tf  ec2.tf  iam.tf  outputs.tf  providers.tf  s3.tf  variables.tf
terraform/networking/: backend.tf  budget.tf  main.tf  outputs.tf  variables.tf
