[tool.poetry]
name = "ray-lightning-demo"
version = "0.1.0"
description = ""
authors = ["Facu Palavecino <palav.facundo@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_lightning_demo"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pandas = "2.1.4"
scikit-learn = "1.4.0"
matplotlib = "3.8.2"
jupyter = "1.0.0"
ipykernel = "6.29.4"
torchinfo = "1.8.0"
torch = "2.2.2"
torchvision = "0.17.2"
# torch = {version = "2.2.2+cu118", source = "pytorch"}
# torchvision = {version = "0.17.2+cu118", source = "pytorch"}
lightning = "2.2.4"
pillow = "10.3.0"
psutil = "5.9.8"
tensorboard = "2.16.2"
mlflow = "2.11.3"
python-dotenv = "1.0.1"
pynvml = "11.5.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"